--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-11-09  Tor Lillqvist  <tml@novell.com>
+
+	* gdk/win32/gdkwindow-win32.c: Remove unnecessary includes.
+	(gdk_window_set_geometry_hints): Remove code that has been
+	permanently ifdeffed out for two years.
+
 2005-11-08  Matthias Clasen  <mclasen@redhat.com>
 
 	* gdk/gdkgc.c (gdk_gc_finalize): Unref tile and stipple when
